# authentication

./: .gitignore  Cargo.toml  README.md  build.rs  documentation.html  github-oidc.yml  package-lock.json  package.json  samconfig.toml  schema.sql  template.yaml  tsconfig.json  wrangler.toml
.aws-sam/: build.toml
.github/workflows/: deploy.yml
docs/: index.html
macros/: Cargo.toml
macros/src/: lib.rs
src/: index.ts  main.rs
src/config/: db.rs  messenger.rs  mod.rs
src/db/: ids.ts  mod.rs  queries.ts  table.rs  tables.rs
src/middleware/: auth.ts
src/routes/: admin.ts  auth.ts  authentication.rs  mod.rs  sessions.rs  user.rs  user.ts
src/services/: authentication.rs  jwt.ts  kv.ts  mod.rs  session.rs  user.rs  verification.rs  whatsapp.ts
src/types/: authorized.rs  error.rs  id.rs  index.ts  mod.rs  phone.rs  session.rs  token.rs  user.rs  verification.rs
