[package]
name = "authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.13", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.104.0"
axum = { version = "0.8.9", features = ["macros"] }
lambda_http = "1.1.3"
rusty_paseto = { version = "0.9.0", features = ["v4", "local"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

