[package]
name = "authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.13", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.104.0"
axum = { version = "0.8.9", features = ["macros"] }
lambda_http = "1.1.3"
rand = { version = "0.10.1", features = ["thread_rng"] }
rusty_paseto = { version = "0.9.0", features = ["v4", "local"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
macros = {path = "macros"}
bson = "3.1.0"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
phone-number-verifier = "1.0.1"
